# AI_Orchestrator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
app/: control_panel.py
assistant_core/: __init__.py  cli.py  config.py  config_writer.py  logging_utils.py  paths.py  safety.py  scheduler_status.py  schemas.py  storage.py
assistant_core/clarification/: __init__.py  graph.py  prompts.py  question_generator.py  readiness.py  work_packet_builder.py
assistant_core/execution/: __init__.py  cloud_review.py  context.py  evaluators.py  file_utils.py  graph.py  output_writer.py  prompts.py  runner.py  steps.py
assistant_core/llm/: __init__.py  litellm_client.py  model_policy.py  ollama_admin.py  ollama_client.py
assistant_core/memory/: __init__.py  memory_extractor.py  memory_reviewer.py  obsidian.py  vector_store.py
config/: assistant.yaml  litellm.yaml.example  memory.yaml  models.yaml
docs/: auto_execution.md  day_unlock.md  models_panel.md
examples/: sample_answers.md  sample_task.md  sample_work_packet.json
scripts/: answer_questions.sh  build_pdfs.py  check_system.sh  create_launchd_plist.sh  create_work_packet.sh  day_lock.sh  day_unlock.sh  export_audit.sh  install_core.sh  pull_models.sh  review_code.sh  run_clarification.sh  run_ready_overnight.sh  run_tests.sh  start_control_panel.sh  start_litellm.sh  start_services.sh  start_temporal_worker.sh  status_services.sh  stop_services.sh
tests/: conftest.py  test_clarification_flow.py  test_cloud_review.py  test_config_writer.py  test_control_panel_import.py  test_execution_runner.py  test_execution_steps.py  test_file_utils.py  test_ollama_admin.py  test_readiness.py  test_safety.py  test_scheduler_status.py  test_scripts_static.py  test_storage_serialization.py  test_task_types.py
(+21 files in other folders)
